--- a/settings.json
+++ b/settings.json
@@ -3,11 +3,11 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Kurz Bot Assistan", 
-"ownerNumber": "6281220670449@s.whatsapp.net",
-"NomorOwner":"6281220670449", 
-"NomorOwner2":"+62 812-2067-0449", 
-"NamaOwner":"KURRXD", 
+"NamaBot":"Tahu Bot V2", 
+"ownerNumber": "6285643774316@s.whatsapp.net",
+"NomorOwner":"6285643774316", 
+"NomorOwner2":"+62 882-1530-6332", 
+"NamaOwner":"TahuBotz", 
 "Dana":"081220670449", 
 "Pulsa":"081220670449", 
 "Gopay":"082298891772", 
